--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.0.1",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.0.1",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.6.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
