--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "^3.0.1",
+    "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -17,7 +18,9 @@
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "bcrypt": "^3.0.6",
+    "hash-generator": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
