--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "devs": "nodemon ./bin/wwws"
   },
   "dependencies": {
     "async": "^3.0.1",
+    "bcrypt": "^3.0.6",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.10.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-validator": "^6.0.1",
+    "hash-generator": "^0.1.0",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.0",
-    "morgan": "~1.9.1",
-    "bcrypt": "^3.0.6",
-    "hash-generator": "^0.1.0"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
