--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bcrypt": "^3.0.6",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.10.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.16.2",
     "express-validator": "^6.0.1",
     "hash-generator": "^0.1.0",
     "helmet": "^3.18.0",
