--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.6",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.10.0",
@@ -23,8 +24,11 @@
     "hash-generator": "^0.1.0",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.2.7",
     "mongoose": "^5.6.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
